--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,38 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  border: 8px solid white;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  border-bottom: 8px solid white;
+  margin: 0;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 8px solid white;
 }
 
 .button-container {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
   background: #e3f4ff;
+  padding: 8px;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: auto;
+  padding: 8px 24px;
 }
+
