--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,12 @@
 .header  {
-  font-family: monospace;
+  font-family: "times new roman" monospace;
   background: papayawhip;
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  justify-content: space-between;
 }
+
 
 .logo {
   font-size: 48px;
@@ -14,12 +19,17 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   font-size: 22px;
+  font-weight: 500;
   background: white;
   padding: 8px;
+  margin: 8px;
   /* this removes the line under the links */
   text-decoration: none;
 }
