--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,14 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-left-section, .header-right-section {
+  display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -27,6 +35,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 8px;
 }
 
 button {
@@ -35,14 +44,24 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  flex: 1, 1, auto;
+  margin: 16px;
+}
+
+.profile-image{
+  margin-right: 8px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 0;
+  margin: 8px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding-left: 8px;
 }
