--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  }
+
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +16,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.plant-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant-box {
+max-width: 200px;
+}
+
+/*.text,
+.img { 
+  flex: 1, 1, auto;
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
