--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,30 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  display: flex;
+  padding: 16px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.right-section {
+  margin-left: 16px;
+}
+
+.right-section-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.text {
+  margin-bottom: 16px;
+}
